@@ -236,8 +236,9 @@ build-kernel-dkms-tree: build-kernel-source-tree
 	mkdir -p $(dir $(dkms_source))
 	cp -a $(module_source) $(dkms_source)
 	cd $(dkms_source) \
-	    && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2 \
-	    && $(RM) -r .pc debian
+	    && mkdir patches \
+	    && mv debian/patches/*.patch debian/patches/series patches/ \
+	    && $(RM) -r debian
 	ls -la $(dkms_source)
 
 kernel-source-tree: build-stamp $(AUTOGEN)
@@ -321,7 +322,12 @@ override_dh_strip_nondeterminism:
 	-e 's{#HAS_UVM#}{$(if $(has_uvm),,#)}g;' \
 	-e 's{#!armhf#}{$(if $(filter armhf,$(DEB_HOST_ARCH)),#)}g;' \
 	-e 's{#tls#}{$(if $(filter armhf,$(DEB_HOST_ARCH)),,tls/)}g;' \
+	$(EXTRA_SUBSTITUTIONS) \
 	< $< > $@
+
+debian/module/debian/patches/series: EXTRA_SUBSTITUTIONS =
+debian/nvidia-kernel-dkms.dkms: debian/module/debian/patches/series
+debian/nvidia-kernel-dkms.dkms: EXTRA_SUBSTITUTIONS += -e 's{\#MODULE_PATCHES\#}{$(patsubst %,%,$(shell grep -v ^\# debian/module/debian/patches/series))}g;'
 
 debian/module/debian/changelog: debian/changelog
 	sed '1s/^nvidia-graphics-drivers$(legacy)/$(nvidia)-kernel/g' $< > $@
